--- a/Nailhang.Blazor/Shared/NavMenu.razor
+++ b/Nailhang.Blazor/Shared/NavMenu.razor
@@ -16,7 +16,12 @@
             <NavLink class="nav-link" href="interfaces">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Элементы привязок
             </NavLink>
-        </li>        
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="netpublicsearch">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> .Net public поиск
+            </NavLink>
+        </li>
     </ul>
 </div>
 
