--- a/Nailhang.Blazor/Shared/NavMenu.razor
+++ b/Nailhang.Blazor/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="netpublicsearch">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> .Net public поиск
+                <span class="oi oi-list-rich" aria-hidden="true"></span> .Net поиск
             </NavLink>
         </li>
     </ul>
