--- a/Nailhang.Blazor/Pages/NetPublicSearch.razor
+++ b/Nailhang.Blazor/Pages/NetPublicSearch.razor
@@ -1,17 +1,20 @@
 ﻿@page "/netpublicsearch"
+@page "/netpublicsearch/{query}/"
 
 @using Nailhang.Blazor.Data
 @using Nailhang.Display.NetPublicSearch.Base
 @using Nailhang.IndexBase.PublicApi
 
 @inject Nailhang.Display.NetPublicSearch.Base.INetSearch netSearch;
+@inject NavigationManager navigationManager;
 
 <h1>Поиск:</h1>
 
 <div class="panel panel-default">
     <div class="panel-heading">Поиск:</div>
     <div class="panel-body">
-        <input type="text" @oninput="@UpdateFromText"/>
+        <input type="text" @bind-value="Query" 
+               @oninput="@UpdateFromText"/>
     </div>
 </div>
 
@@ -24,46 +27,40 @@
 else
 {
     <div class="interfaces-list">
-        @foreach (var ass in displayItems.OrderBy(q => q.Assembly.FullName)
-              .GroupBy(q => new { q.Assembly.FullName, q.Assembly.AssemblyVersion }))
-        {
-            <div class="assembly_desc_dev">
-                <p class="descr_assembly">Сборка: @ass.Key.FullName (@ass.Key.AssemblyVersion)</p>
-                <br />
-
-                @foreach (var cl in ass.OrderBy(w => w.Class.Name))
-                {
-                    <p class="descr_class">Класс: @cl.Class.FullName</p>
-                    <br />
-                    <ul>
-                        @foreach (var method in cl.Class.Methods
-                            .OrderBy(w => w.Name)
-                            .ThenBy(w => w.ParametersString()))
-                        {
-                            <li>
-                                <span class="descr_result">@method.Returns</span>
-                                <span class="descr_method">@method.Name</span>
-                                @if (method.GenericParameters.Length > 0)
-                                {
-                                    <span class="descr_method">@(method.GenericsString(true))</span>
-                                }
-                                <span class="descr_parameters">(@(method.ParametersString())</span>
-                            </li>
-                        }
-                    </ul>
-                }
-            </div>
-        }
+        <ul>
+            @foreach (var displayResult in displayItems)
+            {
+                <li>
+                    <a class="sp_class" href=@($"classview/{@Uri.EscapeDataString(displayResult.Assembly.FullName)}/{@Uri.EscapeDataString(displayResult.Class.FullName)}/")>
+                        @displayResult.Class.FullName
+                    </a>
+                    <span class="sp_assembly">
+                        @displayResult.Assembly.FullName.Split(',').First()
+                    </span>
+                </li>
+            }
+        </ul>
     </div>
 }
 
+@code {
+    [Parameter]
+    public string Query { get; set; }
 
-@code {        
     SearchItem[] displayItems { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
         displayItems = new SearchItem[] { };
+        if (!string.IsNullOrEmpty(Query))
+        {
+            var search = Query;
+            lastSearchReq = search;
+            var searchres = await Task.Run(() => netSearch.Search(search, 50).ToArray());
+
+            if (lastSearchReq == search)
+                displayItems = searchres;
+        }
     }
 
     string lastSearchReq;
@@ -84,8 +81,13 @@ else
             else
             {
                 var searchres = await Task.Run(() => netSearch.Search(text, 50).ToArray());
-                if(lastSearchReq == text)
+                if (lastSearchReq == text)
+                {
                     displayItems = searchres;
+                    var dataEncoded = System.Uri.EscapeDataString(text);
+                    navigationManager.NavigateTo($"/netpublicsearch/{dataEncoded}");
+                    Query = text;
+                }
             }
         }
     }
