--- a/Nailhang.Blazor/Pages/ClassView.razor
+++ b/Nailhang.Blazor/Pages/ClassView.razor
@@ -11,8 +11,19 @@
 else
 {
     <p>
+        @if (@classItem.Value.IsPublic)
+        {
+            <span class="public_modifier_span">public</span>
+        }
+        else
+        {
+            <span class="notpublic_modifier_span">not public</span>
+        }
+        <br />
+
         <h2>Класс: @classItem.Value.FullName</h2>
         <br />
+
         <span class="sp_assembly">
             @assemblyItem.Value.FullName
         </span>
@@ -20,10 +31,19 @@ else
 
     <ul>
         @foreach (var method in classItem.Value.Methods
-       .OrderBy(w => w.Name)
-       .ThenBy(w => w.ParametersString()))
+      .OrderBy(w => w.Name)
+      .ThenBy(w => w.ParametersString()))
         {
             <li>
+                @if (method.IsPublic)
+                {
+                    <span class="public_modifier_span">public</span>
+                }
+                else
+                {
+                    <span class="notpublic_modifier_span">not public</span>
+                }
+
                 <span class="descr_result">@method.Returns</span>
                 <span class="descr_method">@method.Name</span>
                 @if (method.GenericParameters.Length > 0)
