styling + shortname in class assembly reference

--- a/Nailhang.Blazor/Pages/ClassView.razor
+++ b/Nailhang.Blazor/Pages/ClassView.razor
@@ -69,8 +69,11 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        this.assemblyItem = await Task.Factory.StartNew(() => publicApiStorage.LoadAssembly(Assembly));
-        var classes = publicApiStorage.LoadClasses(assemblyItem.Value.Id);
-        this.classItem = classes.First(c => c.FullName == ClassName);
+        this.assemblyItem = await Task.Factory.StartNew(() => publicApiStorage.FindByShortName(Assembly).FirstOrDefault());
+        if (assemblyItem != null)
+        {
+            var classes = publicApiStorage.LoadClasses(assemblyItem.Value.Id);
+            this.classItem = classes.First(c => c.FullName == ClassName);
+        }
     }
 }
